--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ body {
     margin: 2em;
     margin: auto;
     text-align: center;
-    background: whitesmoke;
+    background:  #0e2877;
+	
 }
 
 h1,
