--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     margin: 2em;
     margin: auto;
     text-align: center;
-    background:  #0e2877;
+    background-color: #0e2877;
 	
 }
 
