--- a/index.css
+++ b/index.css
@@ -2,13 +2,12 @@
     box-sizing: border-box;
 }
 
-body {
+html,body {
     font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
     margin: 2em;
     margin: auto;
     text-align: center;
-    background-color:cyaan;
-	
+    background: Cyan;
 }
 
 h1,
@@ -68,11 +67,12 @@ p {
     margin-bottom: 25px;
     padding: 0px 10px 5px 10px;
     margin: 8px auto 8px;
-    border: 2px solid #0e2877;
-    box-shadow: 5px 6px 0px #0e2877;
+    border:  #0e2877;
+	
+    box-shadow: 20px 20px 20px 20px #0e2877;
     width: 95%;
     max-width: 600px;
-    border-radius: 16px;
+  
 }
 
 input {
@@ -108,19 +108,19 @@ box-shadow: inset 5px -5px 10px #009999,
 }
 .main{
   height:700px;
-  border-radius: 36px;
-background: linear-gradient(145deg, #00ffff, #00e6e6);
-box-shadow:  5px 5px 5px #008c8c,
-             -13px -13px 25px #00ffff;
+ border-radius:14px;
+background: linear-gradient(160deg, #00ffff, #00e6e6);
+box-shadow:  10px 10px 20px #008c8c,
+             -13px -13px 30px #00ffff;
 }
 
 button:hover {
     background-color: cyan;
     color: White;
 	border-radius: 47px;
-background: linear-gradient(45deg, #e63754, #ff4164);
+background: linear-gradient(45deg, blue, #ff4);
 box-shadow:  5px 5px 0px #731b2a,
-             5px 5px 0px #ff5f90;
+             5px 5px 0px blue;
 }
 
 button:active {
